Update footer of diff pug template

--- a/resources/diff.pug
+++ b/resources/diff.pug
@@ -55,9 +55,9 @@ html
         div(class='column right aligned')
           | Powered by
           |
-          a(href='https://github.com/3gpp-network/3gpp') 3GPP.Network
+          a(href='https://github.com/3gpp-network/lib3rd') lib3rd
           | .
           |
           | Report an
           |
-          a(href='https://github.com/3gpp-network/3gpp/issues') issue
+          a(href='https://github.com/3gpp-network/lib3rd/issues') issue
